HEEDLS-375 Make sure logo isn't too large

--- a/DigitalLearningSolutions.Web/Styles/trackingSystem/previewCertificate.scss
+++ b/DigitalLearningSolutions.Web/Styles/trackingSystem/previewCertificate.scss
@@ -116,6 +116,10 @@
   padding: 1.5rem !important
 }
 
+#Logo {
+  max-width: 500px;
+}
+
 @media print {
   .maincontentcontainer {
     background-color: #FFFFFF;
